# serializer version: 1
# name: TestCreate.test_ok[force_choice][sample]
  dict({
    'all_read': True,
    'all_write': True,
    'artifacts': list([
    ]),
    'created_at': 'approximately_now_datetime',
    'format': 'fastq',
    'group': dict({
      'id': 2,
      'legacy_id': None,
      'name': 'gaffers',
    }),
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'id': 1,
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'created_at': 'approximately_now_datetime',
      'id': 2,
      'progress': 0,
      'state': <JobState.PENDING: 'pending'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': <Workflow.CREATE_SAMPLE: 'create_sample'>,
    }),
    'labels': list([
      dict({
        'color': '#11af93',
        'description': 'Quickly candidate change although.',
        'id': 1,
        'name': 'Maybe',
      }),
    ]),
    'library_type': <LibraryType.normal: 'normal'>,
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'reads': list([
    ]),
    'ready': False,
    'subtractions': list([
      dict({
        'id': 1,
        'name': 'Apple',
      }),
    ]),
    'uploads': list([
      dict({
        'created_at': 'approximately_now_datetime',
        'id': 1,
        'name': 'test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': True,
        'size': 723988,
        'type': 'reads',
        'uploaded_at': 'approximately_now_datetime',
        'user': dict({
          'handle': 'johnsoncynthia',
          'id': 2,
        }),
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflows': dict({
      'aodp': <WorkflowState.INCOMPATIBLE: 'incompatible'>,
      'nuvs': <WorkflowState.NONE: 'none'>,
      'pathoscope': <WorkflowState.NONE: 'none'>,
    }),
  })
# ---
# name: TestCreate.test_ok[none][sample]
  dict({
    'all_read': True,
    'all_write': True,
    'artifacts': list([
    ]),
    'created_at': 'approximately_now_datetime',
    'format': 'fastq',
    'group': None,
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'id': 1,
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'created_at': 'approximately_now_datetime',
      'id': 2,
      'progress': 0,
      'state': <JobState.PENDING: 'pending'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': <Workflow.CREATE_SAMPLE: 'create_sample'>,
    }),
    'labels': list([
      dict({
        'color': '#11af93',
        'description': 'Quickly candidate change although.',
        'id': 1,
        'name': 'Maybe',
      }),
    ]),
    'library_type': <LibraryType.normal: 'normal'>,
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'reads': list([
    ]),
    'ready': False,
    'subtractions': list([
      dict({
        'id': 1,
        'name': 'Apple',
      }),
    ]),
    'uploads': list([
      dict({
        'created_at': 'approximately_now_datetime',
        'id': 1,
        'name': 'test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': True,
        'size': 723988,
        'type': 'reads',
        'uploaded_at': 'approximately_now_datetime',
        'user': dict({
          'handle': 'johnsoncynthia',
          'id': 2,
        }),
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflows': dict({
      'aodp': <WorkflowState.INCOMPATIBLE: 'incompatible'>,
      'nuvs': <WorkflowState.NONE: 'none'>,
      'pathoscope': <WorkflowState.NONE: 'none'>,
    }),
  })
# ---
# name: TestCreate.test_ok[users_primary_group][sample]
  dict({
    'all_read': True,
    'all_write': True,
    'artifacts': list([
    ]),
    'created_at': 'approximately_now_datetime',
    'format': 'fastq',
    'group': dict({
      'id': 2,
      'legacy_id': None,
      'name': 'gaffers',
    }),
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'id': 1,
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'created_at': 'approximately_now_datetime',
      'id': 2,
      'progress': 0,
      'state': <JobState.PENDING: 'pending'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': <Workflow.CREATE_SAMPLE: 'create_sample'>,
    }),
    'labels': list([
      dict({
        'color': '#11af93',
        'description': 'Quickly candidate change although.',
        'id': 1,
        'name': 'Maybe',
      }),
    ]),
    'library_type': <LibraryType.normal: 'normal'>,
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'reads': list([
    ]),
    'ready': False,
    'subtractions': list([
      dict({
        'id': 1,
        'name': 'Apple',
      }),
    ]),
    'uploads': list([
      dict({
        'created_at': 'approximately_now_datetime',
        'id': 1,
        'name': 'test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': True,
        'size': 723988,
        'type': 'reads',
        'uploaded_at': 'approximately_now_datetime',
        'user': dict({
          'handle': 'johnsoncynthia',
          'id': 2,
        }),
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflows': dict({
      'aodp': <WorkflowState.INCOMPATIBLE: 'incompatible'>,
      'nuvs': <WorkflowState.NONE: 'none'>,
      'pathoscope': <WorkflowState.NONE: 'none'>,
    }),
  })
# ---
# name: test_finalize
  dict({
    'all_read': True,
    'all_write': True,
    'artifacts': list([
    ]),
    'created_at': 'not_approximately_now_datetime',
    'format': 'fastq',
    'group': None,
    'group_read': True,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 1,
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'created_at': 'not_approximately_now_datetime',
      'id': 1,
      'progress': 100,
      'state': <JobState.FAILED: 'failed'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': <Workflow.CREATE_SAMPLE: 'create_sample'>,
    }),
    'labels': list([
      dict({
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      }),
    ]),
    'library_type': <LibraryType.normal: 'normal'>,
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': dict({
      'bases': list([
        list([
          1543,
        ]),
      ]),
      'composition': list([
        list([
          6372,
        ]),
      ]),
      'count': 7069,
      'encoding': 'OuBQPPuwYimrxkNpPWUx',
      'gc': 34222440,
      'length': list([
        3237,
      ]),
      'sequences': list([
        7091,
      ]),
    }),
    'reads': list([
      dict({
        'download_url': '/samples/1/reads/reads.fq.gz',
        'id': 1,
        'name': 'reads.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 1,
        'size': 15,
        'upload': dict({
          'created_at': 'not_approximately_now_datetime',
          'id': 2,
          'name': 'test.fq.gz',
          'ready': True,
          'removed': True,
          'removed_at': 'not_approximately_now_datetime',
          'reserved': False,
          'size': 723988,
          'type': 'reads',
          'uploaded_at': 'not_approximately_now_datetime',
          'user': dict({
            'handle': 'zwilliams',
            'id': 2,
          }),
        }),
        'uploaded_at': 'not_approximately_now_datetime',
      }),
    ]),
    'ready': True,
    'subtractions': list([
      dict({
        'id': 1,
        'name': 'Apple',
      }),
      dict({
        'id': 2,
        'name': 'Pear',
      }),
    ]),
    'uploads': list([
      dict({
        'created_at': 'not_approximately_now_datetime',
        'id': 2,
        'name': 'test.fq.gz',
        'ready': True,
        'removed': True,
        'removed_at': 'not_approximately_now_datetime',
        'reserved': False,
        'size': 723988,
        'type': 'reads',
        'uploaded_at': 'not_approximately_now_datetime',
        'user': dict({
          'handle': 'zwilliams',
          'id': 2,
        }),
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflows': dict({
      'aodp': <WorkflowState.INCOMPATIBLE: 'incompatible'>,
      'nuvs': <WorkflowState.NONE: 'none'>,
      'pathoscope': <WorkflowState.NONE: 'none'>,
    }),
  })
# ---
